<resources>
    <string name="app_name">Appcent Assignment</string>
    <string name="no_internet">No Internet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="select_camera">Select camera</string>
    <string name="date_of_photo">Date of photo</string>
    <string name="car_name">Car name</string>
    <string name="camra_name">Camra name</string>
    <string name="mission_status">Mission status</string>
    <string name="date_of_launch">Date of launch</string>
    <string name="landofcard">date of landing</string>
</resources>